--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>ATG</title>
-    <link rel="stylesheet" href="assets/css/bundle.css" type="text/css">
+    <link rel="stylesheet" href="/assets/css/bundle.css" type="text/css">
   </head>
   <body>
     <header>
       <div class="content">
         <div class="logo">
           <a href="/">
-            <img src="/atg-stage/assets/img/ATG-Logo.jpg"/>
+            <img src="/assets/img/ATG-Logo.jpg"/>
           </a>
         </div>
         <nav>
@@ -29,7 +29,7 @@
           <a href="tel:888-874-9120">888.874.9120</a>
         </div>
         <div class="nav-item">
-          <a class="button locations-link">Locations</a>
+          <a href="#" class="locations-link locations-link-mobile">Locations</a>
         </div>
       </div>
     </header>
@@ -45,7 +45,7 @@
       <a href="https://freightliner.com/" target="_blank">
         <div class="bg"></div>
         <div class="logo-wrap">
-          <img class="brand-logo" src="/atg-stage/assets/img/Freightliner-Logo.png"/>
+          <img class="brand-logo" src="/assets/img/Freightliner-Logo.png"/>
         </div>
       </a>
     </div>
@@ -53,7 +53,7 @@
       <a href="https://www.westernstartrucks.com/" target="_blank">
         <div class="bg"></div>
         <div class="logo-wrap">
-          <img class="brand-logo" src="/atg-stage/assets/img/Western-Star-Logo.png"/>
+          <img class="brand-logo" src="/assets/img/Western-Star-Logo.png"/>
         </div>
       </a>
     </div>
@@ -70,7 +70,6 @@
             <div class="state">
               <h3>Massachusetts</h3>
               <span class="location" data-location="shrewsbury"><a href="http://www.tristatetruckcenter.com/" target="_blank">Shrewsbury</a></span>
-              <span class="location" data-location="tewksbury"><a href="https://www.mctrucks.com/tewksbury-massachusetts-truck-dealer" target="_blank">Tewksbury</a></span>
               <span class="location" data-location="westfield"><a href="https://www.patriotfreightlinertrucks.com/patriot-freightliner-locations/massachusetts-truck-fleet-repair/" target="_blank">Westfield</a></span>
               <p>New Massachusetts Dealership Coming Soon!</p>
             </div>
@@ -89,7 +88,7 @@
           </div>
         </div>
         <div class="contact">
-          <img src="/atg-stage/assets/img/We-Know-Trucks-TM.png"/>
+          <img src="/assets/img/We-Know-Trucks-TM.png"/>
           <span class="spacer"></span>
           <p>Contact Us Today!</p>
           <p>
@@ -2467,8 +2466,8 @@
 </g>
 <polygon id="location-seabrook" class="st3" points="920.06,872.94 925.94,884.84 939.08,886.75 929.57,896.03 931.82,909.12 920.06,902.94 908.31,909.12
 	910.55,896.03 901.04,886.75 914.18,884.84 "/>
-<polygon id="location-tewksbury" class="st3" points="823.95,1004.71 829.83,1016.62 842.97,1018.53 833.46,1027.8 835.71,1040.9 823.95,1034.71
-	812.2,1040.9 814.44,1027.8 804.93,1018.53 818.07,1016.62 "/>
+<!-- <polygon id="location-tewksbury" class="st3" points="823.95,1004.71 829.83,1016.62 842.97,1018.53 833.46,1027.8 835.71,1040.9 823.95,1034.71
+	812.2,1040.9 814.44,1027.8 804.93,1018.53 818.07,1016.62 "/> -->
 <polygon id="location-shrewsbury" class="st3" points="634.71,1116.68 640.58,1128.59 653.73,1130.5 644.22,1139.77 646.46,1152.86 634.71,1146.68
 	622.95,1152.86 625.19,1139.77 615.68,1130.5 628.83,1128.59 "/>
 <polygon id="location-westfield" class="st3" points="344.39,1183.06 350.27,1194.97 363.42,1196.88 353.9,1206.15 356.15,1219.24 344.39,1213.06
@@ -2494,12 +2493,12 @@
     <div class="affiliate-logos">
       <div class="logo align-right">
         <a href="http://www.tristatetruckcenter.com/" target="_blank">
-          <img src="/atg-stage/assets/img/TSTC-Logo.png"/>
+          <img src="/assets/img/TSTC-Logo.png"/>
         </a>
       </div>
       <div class="logo align-left">
         <a href="https://www.mctrucks.com/" target="_blank">
-          <img src="/atg-stage/assets/img/McDevitt-Logo.png"/>
+          <img src="/assets/img/McDevitt-Logo.png"/>
         </a>
       </div>
     </div>
@@ -2513,6 +2512,7 @@
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
-<script src="/atg-stage/assets/js/bundle.js"></script>
+<script src="/assets/js/bundle.js"></script>
 </body>
 </html>
+
